Fixng css for reference tables to prevent overflows.

--- a/docs/next/styles/globals.css
+++ b/docs/next/styles/globals.css
@@ -588,3 +588,7 @@ pre[class="noop"] {
     margin: 0 !important;
     border-radius: 0 !important;
 }
+
+td {
+  word-break:break-word
+}
